--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.content {
+  min-height: calc(100vh - 64px - 70px);
+  padding: 0 1rem;
+}
+
+.active {
+  color: grey;
+  cursor: default;
+}
+
+.footer {
+  margin-top: 120px;
+}
+
+.main {
+  margin: 1%;
+  padding: 0 2%;
+}
+
+.nav {
+  
+}
+
+h5.nav {
+  color: "black";
+  text-shadow: "2px";
 }
